--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,13 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
   pointer-events: none;
 }
 
@@ -15,14 +19,29 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  
+  width: auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  /* justify-content: center; */
+  font-size: 15px;
   color: white;
 }
+.App-header a {
+  list-style: none;
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+}
+.App-header a:hover {
+  background-color: blue;
+}
+.App-header a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
 
 .App-link {
   color: #61dafb;
