--- a/templates/foruminput.html
+++ b/templates/foruminput.html
@@ -9,7 +9,7 @@
 
    
 {% for i in range(length) %}
-    <div>
+    <div class="post">
         <li class="User">User: {{userlist[i]}}</li>
         <li class="Rating">Title: {{titlelist[i]}}</li>
         <li class="Comment">Content: {{contentlist[i]}}</li>
