--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 *{
   margin: 0;
   padding: 0;
+  background-color: black;
+  color: yellow;
 }
 .App {
   text-align: center;
@@ -18,7 +20,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: yellow;
   
   width: auto;
   display: flex;
@@ -32,10 +34,12 @@
   list-style: none;
   padding: 10px;
   text-decoration: none;
-  color: white;
+  color: black;
+  background-color: yellow;
 }
 .App-header a:hover {
-  background-color: blue;
+  background-color: black;
+  color: yellow;
 }
 .App-header a.active {
   background-color: #04AA6D;
@@ -45,6 +49,29 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.post{
+  border: yellow 1px solid;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 5% 10%;
+  display: flex;
+  justify-content: center;
+}
+.brand {
+  position: absolute;
+  left: 50%;
+  margin-left: -35px !important;  /* 50% of your logo width */
+  display: block;
+  color: black;
+  background-color: yellow;
+}
+.login{
+  position: absolute;
+  left: 95%;
+  display: block;
+  
 }
 
 @keyframes App-logo-spin {
