--- a/static/styles/forum.css
+++ b/static/styles/forum.css
@@ -7,6 +7,17 @@
 .input{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.input form{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+#abc{
+    width: 500px;
+    height: 200px;
 }
 .main{
     display: flex;
@@ -19,6 +30,9 @@
     padding: 5% 10%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    font-size: 30px;
 }
 .list{
     list-style-type: none;
@@ -45,4 +59,27 @@ input[type=Submit]:hover{
     background-color: yellow;
     color: black;
     cursor: pointer;
+}
+button{
+    border: 2px solid yellow;
+    border-radius: 4px;
+    padding: 10px 10px;
+}
+a{
+    margin-top: 50px;
+    border: 2px solid yellow;
+    border-radius: 4px;
+    padding: 10px 10px;  
+}
+textarea[type=text] {
+    border: 2px solid yellow;
+    border-radius: 4px;
+    padding: 10px 10px;
+}
+textarea[type=text]:focus {
+    border: 2px solid yellow;
+    border-radius: 4px;
+    padding: 10px 10px;
+    background-color: yellow;
+    color: black;
 }
