--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,14 +6,15 @@
         <div class="user-font">Username</div>
         <input class="user-input" type="text" name="username" autofocus="" min="1" maxlength="30" required>
         <div class="pass-font">Password</div>
-        <input class="password-input" type="text" name="password" autofocus="" min="1" maxlength="30" required>
-        <input class="button" type="Submit" value="Sign up">
+        <input class="password-input" type="text" name="password" autofocus="" min="1" maxlength="30" required><br>
+        <input class="button" type="Submit" value="Sign up"><br>
+        <span class="flavor-text">Already have an account?</span>
+        <a href="{{url}}">Log in</a>
     </form>
 </div>
 
 
 
 <div>
-<span class="flavor-text">Already have an account?</span>
-<a href="{{url}}">Log in</a>
+
 </div>
